# Transact-Recorder

./: CMakeLists.txt  LICENSE  README.md  Resources.qrc  addItemDialog.cpp  addItemDialog.h  iconAttribution  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  purchaseFormDialog.cpp  purchaseFormDialog.h
